@@ -11,6 +11,7 @@ CVS HEAD:
    * fixed some typos (#13714,#13715,#13716,#13717,#13718)
    * added terrain descriptions to in-game help
    * fixed blank terrain entries in unit help
+   * explicitly ignore environment variable LANGUAGE (forum thread 6614)
  * unit balancing and modifications:
    * max level units given After-Max-Level-Advancement (AMLA) of 3 HP/100XP
      added to max HP, with no auto-heal; Necrophage has healing AMLA
